CREATE TABLE audio_tracks (
    uuid CHAR(36) PRIMARY KEY,
    volume FLOAT NOT NULL DEFAULT 1.0,
    mute BOOLEAN NOT NULL DEFAULT FALSE,
    track_name VARCHAR(255),
    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);
