CREATE TABLE video_effect (
    uuid CHAR(36) PRIMARY KEY,
    type VARCHAR(100) NOT NULL,
    parameters JSON,
    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);
