CREATE TABLE audio_effect (
    uuid CHAR(36) PRIMARY KEY,
    type VARCHAR(100) NOT NULL,
    parameters TEXT,
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);